// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package fleet;

option go_package = "api";

import "machine.proto";

service Registration {
  // CreateMachines registers new Chrome/ChromeLab machines.
  rpc CreateMachines(MachineList) returns (MachineResponse);

  // Get Machine information
  rpc GetMachines(EntityIDList) returns (MachineResponse);

  // List all the machines
  rpc ListMachines(ListMachinesRequest) returns (MachineResponse);

  // Update the machines
  rpc UpdateMachines(MachineList) returns (MachineResponse);

  // Delete the machines
  rpc DeleteMachines(EntityIDList) returns (EntityIDResponse);
}

message MachineList {
  repeated fleet.Machine machine = 1;
}

message MachineResponse {
  repeated MachineResult passed = 1;
  repeated MachineResult failed = 2;
}

message MachineResult {
  fleet.Machine machine = 1;
  string error_msg = 2;
}

message ListMachinesRequest {}

message EntityIDList {
  // TODO(eshwarn): change id to assetTag or some other name(chrome lab)
  repeated string id = 1;
}

message EntityIDResult {
  string id = 1;
  string error_msg = 2;
}

message EntityIDResponse {
  repeated EntityIDResult passed = 1;
  repeated EntityIDResult failed = 2;
}